--- a/style/index.css
+++ b/style/index.css
@@ -1,25 +1,3 @@
-*, *::before, *::after {
-     -moz-box-sizing: border-box;
-     -webkit-box-sizing: border-box;
-     box-sizing: border-box;
-}
-
-html {
-    height: 100%;
-    font-size: 100%;
-}
-
-body {
-    font-family: 'Open Sans';
-    color: white;
-    min-height: 100%;
-    background-image: url(../assets/images/knowyourbeer-background.png);
-    background-repeat: no-repeat;
-    overflow: hidden;
-    background-position: center center;
-    background-size: cover;
-}
-
 .logo-tagline {
     padding-top: 40px
 }
@@ -40,7 +18,7 @@ body {
 
 .search-box {
     margin: 150px auto;
-    width: 60%;
+    width: 70%;
     max-width: 700px;
 }
 
@@ -87,42 +65,6 @@ body {
 }
 
 
-
-footer{
-    height: auto;
-	position: absolute;
-	bottom: 0;
-	left:0;
-    font-size: 12px;
-    width: 100%;
-    padding: 0 20px 5px 20px;
-    
-}
-
-footer p {
-    display: inline-block;
-    width: 33%;
-    
-}
-
-.footer-links {
-    display: inline-block;
-    width: 33%;
-    text-align: center
-}
-
-.footer-links a {
-    color: white;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-.footer-logo {
-    display: inline-block;
-    width: 33%;
-    text-align: right;
-}
-
 @media (max-width: 768px) {
     
     .search-box {
@@ -136,7 +78,16 @@ footer p {
         font-weight: 400;
         font-size: 20px
     }
+    .container-1 input#search {
+        font-size: 20px;
+        
+    }
     
+    .container-1 .icon {
+        font-size: 20px;
+        margin-left: 15px;
+        margin-top: 15px;
+    }
     
     .footer-logo {
         display: none;
@@ -158,7 +109,7 @@ footer p {
         width: 95%;
     }
     .container-1 input#search {
-        height: 30px;
+        height: 60px;
         font-size: 16px;
         text-transform: uppercase;
         float: left;
@@ -168,9 +119,7 @@ footer p {
     .container-1 .icon{
         position: absolute;
         margin-left: 10px;
-        margin-top: 4px;
+        margin-top: 18px;
         font-size: 16px;
     }
 }
-
-
