--- a/style/search.css
+++ b/style/search.css
@@ -128,6 +128,7 @@ footer{
     background-image: url(../assets/images/knowyourbeer-background.png);
     background-position: bottom center;
     background-repeat: no-repeat;
+    background-size: cover;
 }
 
 @media (max-width: 768px) {
@@ -163,6 +164,10 @@ footer{
         width: 50%;
         text-align: right;
     }
+    
+     footer {
+        background-size: auto;
+    }
 }
 
 @media (max-width: 414px) {
@@ -190,5 +195,5 @@ footer{
         font-size: 12px;
     }
         
-    
+}
 
