--- a/style/beer-landing.css
+++ b/style/beer-landing.css
@@ -1,18 +1,19 @@
 .header {
-    height: 90px;
+    height: 110px;
 }
 
 .logo {
-    position: absolute;
-    left: 40px;
-    display: block;
-    
+        display: block;
+        position: relative;
+        text-align: center;
+        left: 0px;
+        top: 5px
 }
 
 .search-box {
-    margin: 46px auto;
-    width: 40%;
-    max-width: 700px;
+        width: 90%;
+        margin: 20px auto;   
+        max-width: 800px;
 }
 
 .container-1 {
@@ -32,14 +33,38 @@
     -moz-border-radius: 4px;
     border-radius: 4px;
     font-family: Montserrat-Regular;
-    font-size: 14px;
+    font-size: 16px;
     color: rgba(51, 51, 51, 0.57);
     text-transform: uppercase;
     float: left;
-    padding-left: 25px;
+    padding-left: 15px;
 }
 
-.container-1 input#search:focus, .container-1 input#search:hover {
+.container-1 button.icon{
+    -webkit-border-top-right-radius: 4px;
+    -webkit-border-bottom-right-radius: 4px;
+    -moz-border-radius-topright: 4px;
+    -moz-border-radius-bottomright: 4px;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    
+    border: none;
+    background: rgba(140, 88, 0, 0.44);
+    height: 36px;
+    width: 50px;
+    color: #fff;
+    opacity: 0;
+    font-size: 16px;
+    
+    -webkit-transition: all .55s ease;
+    -moz-transition: all .55s ease;
+    -ms-transition: all .55s ease;
+    -o-transition: all .55s ease;
+    transition: all .55s ease;
+}
+
+.container-1 input#search:focus, 
+.container-1 input#search:hover {
     outline: none;
     box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.47);
     box-shadow: inset 0px 1px 2px 0px rgba(0,0,0,0.47);
@@ -47,61 +72,62 @@
     color: #333;
 }
 
-.container-1 .icon{
-    position: absolute;
-    vertical-align: center;
-    margin-left: 10px;
-    margin-top: 8px;
-    z-index: 1;
-    color: rgba(51, 51, 51, 0.57);
-    font-size: 14px;
-}
+.container-1:hover button.icon,
+.container-1:active button.icon,
+.container-1:focus button.icon {
+    outline: none;
+    opacity: 1;
+    margin-left: -50px;
+  }
+
+  .container-1:hover button.icon:hover{
+    background: #8C5800;
+  }
 
 .main {
     background-color: #fff;
-    min-height: 609px;
     margin-left: -8px;
     margin-right: -8px;
-    color: #333;
-    
+    color: #333;   
 }
 
 .main-column {
-    width: 65%;
+    width: 90%;
     padding-top: 40px;
     margin: auto;
-    max-width: 1000px;
 }
 
 .beer-logo {
     display: inline-block;
     vertical-align: top;
     margin-right: 10px;
-    
+    margin-top: -10px;
 }
 
 .beer-info {
     display: inline-block;
-    margin-top: -25px
+    margin-top: -25px;
+    width: 60%;
 }
 
 .beer-title {
     font-family: Montserrat;
     text-transform: uppercase;
-    font-size: 22px;
+    font-size: 14px;
 }
 
 .brewery {
     font-weight: 400;
-    font-size: 15px;
-    margin-top: -20px;
+    font-size: 13px;
+    margin-top: -10px;
+    margin-bottom: 0px;
 }
 
 .attribute-value {
     display: inline;
-    font-size: 14px;
+    font-size: 10px;
     font-weight: 700;
-    margin-right: 10px;
+    margin-right: 5px;
 }
 
 .attribute {
@@ -114,8 +140,8 @@
 }
 
 .main-column p {
-    font-size: 17px;
-    line-height: 30px;
+    font-size: 12px;
+    line-height: 22px;
     text-indent: 25px
 }
 
@@ -141,76 +167,77 @@ footer{
     background-size: cover;
 }
 
-@media (max-width: 768px) {
-    
-    .header {
-        height: 110px;
+.footer-logo {
+        display: none;
 }
-    .logo {
-        display: block;
-        position: relative;
-        text-align: center;
-        left: 0px;
-        top: 5px
-    }
-    .search-box {
-        width: 90%;
-        margin: 20px auto;    
+
+footer p {
+        width: 49%;
+}
+
+.footer-links {
+    width: 50%;
+    text-align: right;
+}
+
+footer {
+    background-size: auto;
+}
+
+@media (min-width: 768px) {
+    
+    .beer-logo {
+        margin-top: -5px;
     }
     
-    .main-column {
-        width: 90%
+    .beer-info {
+        width: 70%
+    }
+    
+    .beer-title {
+        font-size: 20px;
+    }
+    
+    .brewery {
+        margin-top: -15px;
+        font-size: 15px;
+        margin-bottom: 0px
+    }
+    
+    .attribute-value {
+        font-size: 12px;
+        margin-right: 10px;
+    }
+    
+    .main-column p {
+        font-size: 15px;
+        line-height: 27px;
     }
     
     .footer-logo {
-        display: none;
+        display: inline-block;
+        margin-top: 5px;
     }
     
     footer p {
-        width: 49%;
+        width: 33%;
     }
     
     .footer-links {
-        width: 50%;
-        text-align: right;
-    }
-
-    .main-column p {
-    font-size: 15px;
-    line-height: 27px;
+        width: 33%;
+        text-align: center;
     }
     
     footer {
-        background-size: auto;
+        background-size: cover;
     }
 }
 
-@media (max-width: 414px) {
-
-    .beer-info {
-        width: 60%
+@media (min-width: 992px) {
+    
+    .main-column {
+        width: 80%;
+        max-width: 770px;
     }
     
-    .beer-logo {
-        display: inline-block;
-        margin-top: -10px;
-    }
-    .beer-title {
-        font-size: 14px;
-    }
-    .brewery {
-        margin-top: -10px;
-        font-size: 13px;
-        margin-bottom: 0px
-    }
-    .attribute-value {
-        font-size: 10px;
-        margin-right: 0px;
-    }
-    
-   .main-column p {
-    font-size: 12px;
-    line-height: 20px
-    }
-
 }
