--- a/style/search.css
+++ b/style/search.css
@@ -1,17 +1,18 @@
 .header {
-    height: 90px;
+    height: 110px;
 }
 
 .logo {
-    position: absolute;
-    left: 40px;
-    display: block;
-    
+        display: block;
+        position: relative;
+        text-align: center;
+        top: 5px;
 }
 
+
 .search-box {
-    margin: 46px auto;
-    width: 40%;
+    margin: 20px auto;
+    width: 90%;
     max-width: 700px;
 }
 
@@ -32,14 +33,38 @@
     -moz-border-radius: 4px;
     border-radius: 4px;
     font-family: Montserrat-Regular;
-    font-size: 14px;
+    font-size: 16px;
     color: rgba(51, 51, 51, 0.57);
     text-transform: uppercase;
     float: left;
-    padding-left: 25px;
+    padding-left: 15px;
 }
 
-.container-1 input#search:focus, .container-1 input#search:hover {
+.container-1 button.icon{
+    -webkit-border-top-right-radius: 4px;
+    -webkit-border-bottom-right-radius: 4px;
+    -moz-border-radius-topright: 4px;
+    -moz-border-radius-bottomright: 4px;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    
+    border: none;
+    background: rgba(140, 88, 0, 0.44);
+    height: 36px;
+    width: 50px;
+    color: #fff;
+    opacity: 0;
+    font-size: 16px;
+    
+    -webkit-transition: all .55s ease;
+    -moz-transition: all .55s ease;
+    -ms-transition: all .55s ease;
+    -o-transition: all .55s ease;
+    transition: all .55s ease;
+}
+
+.container-1 input#search:focus, 
+.container-1 input#search:hover {
     outline: none;
     box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.47);
     box-shadow: inset 0px 1px 2px 0px rgba(0,0,0,0.47);
@@ -47,15 +72,17 @@
     color: #333;
 }
 
-.container-1 .icon{
-    position: absolute;
-    vertical-align: center;
-    margin-left: 10px;
-    margin-top: 8px;
-    z-index: 1;
-    color: rgba(51, 51, 51, 0.57);
-    font-size: 14px;
-}
+.container-1:hover button.icon,
+.container-1:active button.icon,
+.container-1:focus button.icon {
+    outline: none;
+    opacity: 1;
+    margin-left: -50px;
+  }
+
+  .container-1:hover button.icon:hover{
+    background: #8C5800;
+  }
 
 .main {
     background-color: #fff;
@@ -67,7 +94,7 @@
 }
 
 .main-container {
-    width: 40%;
+    width: 95%;
     padding-top: 40px;
     margin: auto;
 }
@@ -80,30 +107,35 @@
     display: inline-block;
     vertical-align: top;
     margin-right: 10px;
+    margin-top: -10px;
     
 }
 
 .beer-info {
     display: inline-block;
-    margin-top: -25px
+    margin-top: -25px;
+    width: 72%
 }
 
 .beer-title {
     font-family: Montserrat;
     text-transform: uppercase;
-    font-size: 22px;
+    font-size: 14px;
 }
 
 .brewery {
     font-weight: 400;
-    font-size: 15px;
-    margin-top: -20px;
+    font-size: 13px;
+    margin-top: -10px;
+    margin-bottom: 0px;
+    
 }
 
 .attribute-value {
     display: inline;
-    font-size: 14px;
+    font-size: 12px;
     font-weight: 700;
+    
 }
 
 .attribute {
@@ -131,28 +163,7 @@ footer{
     background-size: cover;
 }
 
-@media (max-width: 768px) {
-    
-    .header {
-        height: 110px;
-}
-    .logo {
-        display: block;
-        position: relative;
-        text-align: center;
-        left: 0px;
-        top: 5px
-    }
-    .search-box {
-        width: 90%;
-        margin: 20px auto;    
-    }
-    
-    .main-container {
-        width: 75%
-    }
-    
-    .footer-logo {
+.footer-logo {
         display: none;
     }
     
@@ -168,32 +179,63 @@ footer{
      footer {
         background-size: auto;
     }
-}
 
-@media (max-width: 414px) {
+@media (min-width: 768px) {
+    
     .main-container {
-        width: 95%;
-    }
-
-    .beer-info {
-        width: 72%
+        width: 60%;
     }
     
-    .beer-logo {
+    .footer-logo {
         display: inline-block;
-        margin-top: -10px;
+        margin-top: 5px;
     }
-    .beer-title {
-        font-size: 14px;
+    
+    footer p {
+        width: 33%;
     }
-    .brewery {
-        margin-top: -10px;
-        font-size: 13px;
-        margin-bottom: 0px
+    
+    .footer-links {
+        width: 33%;
+        text-align: center;
     }
-    .attribute-value {
-        font-size: 12px;
-    }
-        
+    
+    
 }
 
+@media (min-width: 992px) {
+    
+    .main-container {
+        width: 40%;
+    }
+    .search-result {
+        margin-top: 30px;
+    }
+    .beer-title {
+        font-size: 20px;
+        margin-top: 14px
+    }
+    .brewery {
+        margin-top: -20px;
+        font-size: 15px;
+        margin-bottom: px;
+    }
+    .attribute-value {
+        margin-right: 10px;
+    }
+    
+    footer {
+        background-size: cover;
+    }
+}
+
+@media (min-width: 1200px) {
+    
+    .main {
+        min-height: 820px;
+    }
+
+    .main-container {
+        width: 30%;
+    }
+}
